font-end layout bug fix

--- a/public/assets/css/tasty-main.css
+++ b/public/assets/css/tasty-main.css
@@ -41,7 +41,7 @@ body{
   z-index: 1;
 }
 
-.icons > svg {
+.icons svg {
   width: 12vh;
   height: 12vh;
   max-width: 65px;
@@ -51,9 +51,20 @@ body{
   cursor: pointer;
 }
 
-.icons > svg:nth-child(1) { fill: #f3586f; margin-right: 2vh; }
-.icons > svg:nth-child(2) { fill: #5bdea5; }
-.icons > svg > path:nth-child(1) { fill: #fff; }
+.icons #hate  svg { fill: #f3586f; }
+.icons #like svg { fill: #5bdea5; }
+.icons  svg > path:nth-child(1) { fill: #fff; }
+
+.icons button {
+  display: inline-block;
+  width: auto;
+  background: transparent;
+  padding: 0;
+  border: 0 none;
+  cursor: pointer;
+  margin: 0 15px
+}
+
 
 .card {
   position: absolute;
@@ -73,6 +84,13 @@ body{
   touch-action: none;
   left: 0;
 }
+
+button:disabled,
+button.disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 
 .card .is-like {
   width: 100%;
@@ -112,7 +130,7 @@ body{
 
 .card .bottom {
   width: 100%;
-  height: 15%;
+  height: 20%;
   background: linear-gradient(to top, #00000090, #00000000);
   display: flex;
   flex-direction: column;
@@ -143,6 +161,15 @@ body{
     transform: translate(-50%, -50%);
     width: 100%;
     text-align: center;
+}
+
+h3.tasty-additional {
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.loading-card{
+  background: #fff;
 }
 
 @media screen and (max-height: 540px) {
